# local-background-remover

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT_RUNBOOK.md  LICENSE  README.md  opencode.json  package.json  turbo.json
.github/workflows/: ci.yml  install-smoke.yml  release.yml
.opencode/plans/: 1774837238686-curious-wizard.md  1774840209425-neon-engine.md  1774850292031-glowing-engine.md  1774852401123-release-version-alignment.md  1774853119024-latest-release-auto-resolution.md  1774879982316-jolly-lagoon.md  1774880922632-playful-cabin.md  1774881271000-license-ca-bundle-and-v030-release.md  1774883429000-auto-license-key-and-t3-env-v031.md  1774885528000-clean-cli-logs-and-v032.md  1774886567521-cosmic-knight.md  1774890999337-eager-mountain.md  1774894205767-cli-docs-refresh.md  1774894865015-silent-nebula.md  1774897422412-nimble-planet.md  1774898245780-swift-comet.md  1774934046001-gentle-canyon.md  1774936440906-desktop-release-pipeline.md  1774968673993-proud-river.md  (+20 more)
apps/rmbg/: AGENTS.md  README.md  package.json  pyinstaller.spec  pyproject.toml  rmbg_entry.py
apps/rmbg/rmbg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/rmbg/rmbg_cli/: __init__.py  cli.py  config.py  inference.py  io.py  license_manager.py  model_manager.py  tls.py  upgrade.py  worker_server.py
apps/rmbg/scripts/: build-binary.sh
apps/rmbg/tests/: test_cli_license.py  test_cli_remove.py  test_cli_upgrade.py  test_inference_runtime.py  test_io.py  test_license_manager.py  test_model_manager.py  test_worker_server.py
scripts/: install.sh
(+138 files in other folders)
